# nhentai

./: .gitignore  pyproject.toml
src/hentai/: __init__.py  __main__.py  cli.py  command.py  consts.py  logs.py  requests.py
src/hentai/api/: __init__.py  hentai.py  homepage.py  models.py  progress.py  search.py  utils.py
tests/: test_cli.py  test_hentai.py  test_page.py  test_requesthandler.py  test_tag.py  test_utils.py
